Angular client successfully grabs movies from db and renders movie list

--- a/angular-client/index.html
+++ b/angular-client/index.html
@@ -16,8 +16,10 @@
 <body>
   <app ng-app="blockbuster"></app>
   <script src="src/index.js"></script>
-  <script src="src/components/app.js"></script>
   <script src="src/services/getMovies.js"></script>
+  <script src="src/components/app.js"></script>
+  <script src="src/components/movieList.js"></script>
+  <script src="src/components/movieListEntry.js"></script>
 </body>
 
 </html>
