--- a/angular-client/index.html
+++ b/angular-client/index.html
@@ -20,6 +20,7 @@
   <script src="src/components/app.js"></script>
   <script src="src/components/movieList.js"></script>
   <script src="src/components/movieListEntry.js"></script>
+  <script src="src/components/addMovieForm.js"></script>
 </body>
 
 </html>
