--- a/angular-client/index.html
+++ b/angular-client/index.html
@@ -16,7 +16,7 @@
 <body>
   <app ng-app="blockbuster"></app>
   <script src="src/index.js"></script>
-  <script src="src/services/getMovies.js"></script>
+  <script src="src/services/movieService.js"></script>
   <script src="src/components/app.js"></script>
   <script src="src/components/movieList.js"></script>
   <script src="src/components/movieListEntry.js"></script>
